change the dict and a link

--- a/member.html
+++ b/member.html
@@ -14,20 +14,20 @@
   <!-- Navigation-->
   <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav" style="background-color: black;">
     <div class="container px-4 px-lg-5">
-      <a class="navbar-brand" href="http://127.0.0.1:5500/startbootstrap-creative-master/dist/index.html">DVAT</a>
+      <a class="navbar-brand" href="index.html">DVAT</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
         data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto my-2 my-lg-0">
           <li class="nav-item"><a class="nav-link"
-              href="http://127.0.0.1:5500/startbootstrap-creative-master/dist/index.html">Home</a></li>
+              href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link"
-              href="http://127.0.0.1:5500/startbootstrap-creative-master/dist/tech.html">Tech</a></li>
+              href="tech.html">Tech</a></li>
           <li class="nav-item"><a class="nav-link"
-              href="http://127.0.0.1:5500/startbootstrap-creative-master/dist/member.html">Member</a></li>
+              href="member.html">Member</a></li>
           <li class="nav-item"><a class="nav-link"
-              href="http://127.0.0.1:5500/startbootstrap-creative-master/dist/contact.html">Contact</a></li>
+              href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
@@ -83,13 +83,13 @@
       <h3>Company<span> DVAT</span></h3>
 
       <p class="footer-links">
-        <a href="http://127.0.0.1:5500/startbootstrap-creative-master/dist/index.html#page-top" class="link-1">Home</a>
+        <a href="index.html#page-top" class="link-1">Home</a>
 
-        <a href="http://127.0.0.1:5500/startbootstrap-creative-master/dist/tech.html">Tech</a>
+        <a href="tech.html">Tech</a>
 
-        <a href="http://127.0.0.1:5500/startbootstrap-creative-master/dist/member.html">Member</a>
+        <a href="member.html">Member</a>
 
-        <a href="http://127.0.0.1:5500/startbootstrap-creative-master/dist/contact.html">Contact</a>
+        <a href="contact.html">Contact</a>
 
       </p>
 
