update footer and modifiy contact

--- a/contact.html
+++ b/contact.html
@@ -48,8 +48,8 @@
     </script>
     <div class="contact-info">
       <p class> 주소 ㅣ 서울특별시 서대문구 연세로 50 연세대학교 제4공학관 D808 데이터공학 연구실</p>
-      <p class>연락처 ㅣ 02-21223-7757</p>
-      <p class>이메일 ㅣ delab.yonsei@gmail.com</p>
+      <p class>연락처 ㅣ 02-2123-7757</p>
+      <p class>이메일 ㅣ medde.yonsei@gmail.com</p>
     </div>    
 </section>    
 
@@ -91,7 +91,7 @@
 
         <div>
             <i class="fa fa-phone"></i>
-            <p>+02-21223-7757</p>
+            <p>02-2123-7757</p>
         </div>
 
         <div>
