--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
         <div class="container px-4 px-lg-5 h-100">
             <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                 <div class="col-lg-8 align-self-end">
-
-                   
                 </div>
-               
             </div>
         </div>
     </header>
@@ -63,14 +60,8 @@
         <div class="container px-4 px-lg-5">
             <h2 class="text-white mt-0" style="text-align: center;">Title</h2>
             <hr class="divider divider-light">
-            <img src="assets/img/문제점.png" alt="Description" class="service-image"> <!-- 추가된 부분 -->
+            <img src="assets/img/main.png" alt="Description" class="service-image">
         </div>
-        <div class="col-lg-3 col-md-6 text-center">
-            <div class="mt-5">
-                <div class="mb-2"><i class="bi-laptop  text-primary"></i></div>
-            </div>
-        </div>
-
     </section>
 
     <!-- our technology-->
@@ -80,8 +71,8 @@
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0" style="text-align: center;">Our technology</h2>
-                    <hr class="divider divider-light">
-                    <div class="flex-container">
+                    <hr class="divider divider-light" style="margin-bottom: 15rem;">
+                    <div class="flex-container" style="margin-bottom: 15rem;">
                         <div>
                             <h4 class="text-white mt-0" style="text-align: center;">Translation</h2>
                             <div class="flex-item">
