--- a/member.html
+++ b/member.html
@@ -20,14 +20,10 @@
         aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ms-auto my-2 my-lg-0">
-          <li class="nav-item"><a class="nav-link"
-              href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link"
-              href="tech.html">Tech</a></li>
-          <li class="nav-item"><a class="nav-link"
-              href="member.html">Member</a></li>
-          <li class="nav-item"><a class="nav-link"
-              href="contact.html">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="tech.html">Tech</a></li>
+          <li class="nav-item"><a class="nav-link" href="member.html">Member</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
