--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
     <!-- our technology-->
     <section class="page-section bg-primary" id="about" style="background: black;">
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
         <div class="container-custom px-4 px-lg-5">
             <div class="row gx-4 gx-lg-5 justify-content-center">
                 <div class="col-lg-8 text-center">
