--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
                         <div>
                             <h4 class="text-white mt-0" style="text-align: center;">Translation</h2>
                             <div class="flex-item">
-                                <div class="img left"><img src="./assets/img/ct.png" alt=""></div>
-                                <div class="img right resize"><img src="./assets/img/mri.png" alt=""></div>
+                                <div class="img left"><img src="./assets/img/ct.png" alt="" style="width: 20rem;"></div>
+                                <div class="img right resize"><img src="./assets/img/mri.png" alt="" style="width: 20rem;"></div>
                                 <span class="control">
                                     <div class="arrow left"></div>
                                     <div class="arrow right"></div>
@@ -87,8 +87,8 @@
                         <div>
                             <h4 class="text-white mt-0" style="text-align: center;">Segmentation</h2>
                             <div class="flex-item">
-                                <div class="img left"><img src="./assets/img/ct.png" alt=""></div>
-                                <div class="img right resize"><img src="./assets/img/seg.png" alt=""></div>
+                                <div class="img left"><img src="./assets/img/mri_seg.png" alt="" style="width: 20rem;"></div>
+                                <div class="img right resize"><img src="./assets/img/seg.png" alt="" style="width: 20rem;"></div>
                                 <span class="control">
                                     <div class="arrow left"></div>
                                     <div class="arrow right"></div>
