modify: main hr, title

--- a/tech.html
+++ b/tech.html
@@ -30,11 +30,12 @@
     </nav>
 
     <section style="margin-top: 10rem; margin-bottom: 10rem;">
-        <img src="assets/img/tech.gif" alt="Description" style="width: 100%; max-width: 70rem; display: block; margin: 0 auto;">
+        <img src="assets/img/tech.gif" alt="Description"
+            style="width: 100%; max-width: 70rem; display: block; margin: 0 auto;">
     </section>
 
     <section style="margin-top: 10rem; margin-bottom: 10rem;">
-        <h2 class="text-white mt-0" style="text-align: center; margin-bottom: 5rem;">technology</h2>
+        <h2 class="text-white mt-0" style="text-align: center; margin-bottom: 5rem;">Technology</h2>
         <div style="position: relative; display: block; margin: 0 auto;">
             <img src="assets/img/tech1.png" class="main_tech">
             <img src="assets/img/tech2.png" class="sub_tech1">
