modify: contact title

--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
         </div>
     </nav>
       <!-- Masthead-->
-      <div class="col-lg-8 text-center">
-        <h2 class="text-white contact-title">Contact</h2>
+      <div class="text-center">
+        <h2 class="text-white contact-title" style="text-align: center; margin-top:8rem">Contact</h2>
       </div>
     <div id="map"></div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDD6W5pZd5sgd9Qd6oJsGi1jRlM6bNX_pE&callback=initMap">
