--- a/member.html
+++ b/member.html
@@ -36,8 +36,6 @@
     </div>
     <div class="member__content">
       <div class="container">
-        <h3>Image to Image Translation</h3>
-        <div class="jb-division-line"></div>
         <div class="flex-container" style="justify-content: space-around;">
           <div>
             <img src="./assets/img/YoungWanJo.jpg" alt="">
@@ -45,16 +43,21 @@
             <h4>YoungWan Jo</h4>
           </div>
           <div>
-            <img src="./assets/img/Hyojeong Lee.jpg" alt="">
-            <h4 style="margin-top: 50px;">AI Researcher</h4>
-            <h4>Hyojeong Lee</h4>
+            <img src="./assets/img/ShanghyunPark.jpg" alt="">
+            <h4 style="margin-top: 50px;">CTO</h4>
+            <h4>Sanghyun Park</h4>
           </div>
         </div>
       </div>
       <div class="container">
-        <h3>Brain Tumor Segmentation</h3>
+        <h3>Member</h3>
         <div class="jb-division-line"></div>
         <div class="flex-container" style="justify-content: space-around;">
+          <div>
+            <img src="./assets/img/Hyojeong Lee.jpg" alt="">
+            <h4 style="margin-top: 50px;">AI Researcher</h4>
+            <h4>Hyojeong Lee</h4>
+          </div>
           <div>
             <img src="./assets/img/HyunjinKim.jpg" alt="">
             <h4 style="margin-top: 50px;">AI Researcher</h4>
