add: partners in member

--- a/member.html
+++ b/member.html
@@ -50,7 +50,7 @@
         </div>
       </div>
       <div class="container">
-        <h3>Member</h3>
+        <h3>Members</h3>
         <div class="jb-division-line"></div>
         <div class="flex-container" style="justify-content: space-around;">
           <div>
@@ -67,6 +67,16 @@
             <img src="./assets/img/SungHyunAhn.jpg" alt="">
             <h4 style="margin-top: 50px;">AI Researcher</h4>
             <h4>SungHyun Ahn</h4>
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <h3>Partners</h3>
+        <div class="jb-division-line"></div>
+        <div class="flex-container" style="justify-content: space-around;">
+          <div>
+            <img src="./assets/img/성모병원.jpg" alt="">
+            <h4 style="margin-top: 50px;">서울성모병원</h4>
           </div>
         </div>
       </div>
