add: partners in member

--- a/member.html
+++ b/member.html
@@ -39,13 +39,17 @@
         <div class="flex-container" style="justify-content: space-around;">
           <div>
             <img src="./assets/img/YoungWanJo.jpg" alt="">
-            <h4 style="margin-top: 50px;">CEO</h4>
-            <h4>YoungWan Jo</h4>
+            <h4 style="margin-top: 40px;">YoungWan Jo</h4>
+            <h5>CEO</h5>
+            <h5>Image to Image translation</h5>
+            <h5>jyy1551@yonsei.ac.kr</h5>
           </div>
           <div>
             <img src="./assets/img/ShanghyunPark.jpg" alt="">
-            <h4 style="margin-top: 50px;">CTO</h4>
-            <h4>Sanghyun Park</h4>
+            <h4 style="margin-top: 40px;">Sanghyun Park</h4>
+            <h5>CTO</h5>
+            <h5>Professor</h5>
+            <h5>sanghyun@yonsei.ac.kr</h5>
           </div>
         </div>
       </div>
@@ -55,18 +59,24 @@
         <div class="flex-container" style="justify-content: space-around;">
           <div>
             <img src="./assets/img/Hyojeong Lee.jpg" alt="">
-            <h4 style="margin-top: 50px;">AI Researcher</h4>
-            <h4>Hyojeong Lee</h4>
+            <h4 style="margin-top: 40px;">Hyojeong Lee</h4>
+            <h5>AI Researcher</h5>
+            <h5>Image to Image translation</h5>
+            <h5>hyojoy@yonsei.ac.kr</h5>
           </div>
           <div>
             <img src="./assets/img/HyunjinKim.jpg" alt="">
-            <h4 style="margin-top: 50px;">AI Researcher</h4>
-            <h4>Hyunjin Kim</h4>
+            <h4 style="margin-top: 40px;">Hyunjin Kim</h4>
+            <h5>AI Researcher</h5>
+            <h5>Segmentation</h5>
+            <h5>hjkim99@yonsei.ac.kr</h5>
           </div>
           <div>
             <img src="./assets/img/SungHyunAhn.jpg" alt="">
-            <h4 style="margin-top: 50px;">AI Researcher</h4>
-            <h4>SungHyun Ahn</h4>
+            <h4 style="margin-top: 40px;">SungHyun Ahn</h4>
+            <h5>AI Researcher</h5>
+            <h5>Segmentation</h5>
+            <h5>skd@yonsei.ac.kr</h5>
           </div>
         </div>
       </div>
@@ -76,7 +86,7 @@
         <div class="flex-container" style="justify-content: space-around;">
           <div>
             <img src="./assets/img/성모병원.jpg" alt="">
-            <h4 style="margin-top: 50px;">서울성모병원</h4>
+            <h4 style="margin-top: 40px;">서울성모병원</h4>
           </div>
         </div>
       </div>
