add publication in footer

--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
                 <a href="index.html#page-top" class="link-1">Home</a>
                 <a href="tech.html">Tech</a>
                 <a href="member.html">Member</a>
+                <a href="publication.html">Publication</a>
                 <a href="contact.html">Contact</a>
             </p>
             <p class="footer-company-name">DVAT © 2023</p>
@@ -125,7 +126,7 @@
                 <p>사업자 등록번호ㅣ 725-66-00731</p>
             </div>
             <div>
-                <i class="fa fa-envelope"></i>
+                <i class="fa fa-house-user"></i>
                 <p><a href="http://delab.yonsei.ac.kr/">http://delab.yonsei.ac.kr/</a></p>
             </div>
         </div>
@@ -134,7 +135,6 @@
             <img src="assets/img/logo.png" alt="Description" class="service-image"> 
         </div>
     </footer>
-</body>
 </body>
 
 </html>
