--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
     <!-- Navigation--> 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-2" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">MedDE</a>
+            <a class="navbar-brand" href="index.html">MedDE</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -80,7 +80,7 @@
                 <p>사업자 등록번호ㅣ 725-66-00731</p>
             </div>
             <div>
-                <i class="fa fa-envelope"></i>
+                <i class="fa fa-house-user"></i>
                 <p><a href="http://delab.yonsei.ac.kr/">http://delab.yonsei.ac.kr/</a></p>
             </div>
         </div>
