edit member page footer

--- a/member.html
+++ b/member.html
@@ -6,6 +6,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MedDE-Members</title>
+  <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+  <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+  <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
   <link href="css/member.css" rel="stylesheet" />
 </head>
@@ -23,128 +33,115 @@
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="tech.html">Tech</a></li>
           <li class="nav-item"><a class="nav-link" href="member.html">Member</a></li>
+          <li class="nav-item"><a class="nav-link" href="publication.html">Publication</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <section>
-    <div class="member__img">
-      <p class="content">About US</p>
-      <img src="./assets/img/hands.jpg" alt="">
-    </div>
-    <div class="member__content">
-      <div class="container">
-        <div class="flex-container" style="justify-content: space-around;">
-          <div>
-            <img src="./assets/img/YoungWanJo.jpg" alt="">
-            <h4 style="margin-top: 40px;">YoungWan Jo</h4>
-            <h5>CEO</h5>
-            <h5>Image to Image translation</h5>
-            <h5>jyy1551@yonsei.ac.kr</h5>
+  <div class="wrapper">
+    <section>
+      <div class="member__img">
+        <p class="content">About US</p>
+        <img src="./assets/img/hands.jpg" alt="">
+      </div>
+      <div class="member__content">
+        <div class="container">
+          <div class="flex-container" style="justify-content: space-around;">
+            <div>
+              <img src="./assets/img/YoungWanJo.jpg" alt="">
+              <h4 style="margin-top: 40px;">YoungWan Jo</h4>
+              <h5>CEO</h5>
+              <h5>Image to Image translation</h5>
+              <h5>jyy1551@yonsei.ac.kr</h5>
+            </div>
+            <div>
+              <img src="./assets/img/ShanghyunPark.jpg" alt="">
+              <h4 style="margin-top: 40px;">Sanghyun Park</h4>
+              <h5>CTO</h5>
+              <h5>Professor</h5>
+              <h5>sanghyun@yonsei.ac.kr</h5>
+            </div>
           </div>
-          <div>
-            <img src="./assets/img/ShanghyunPark.jpg" alt="">
-            <h4 style="margin-top: 40px;">Sanghyun Park</h4>
-            <h5>CTO</h5>
-            <h5>Professor</h5>
-            <h5>sanghyun@yonsei.ac.kr</h5>
+        </div>
+        <div class="container">
+          <h3>Members</h3>
+          <div class="jb-division-line"></div>
+          <div class="flex-container" style="justify-content: space-around;">
+            <div>
+              <img src="./assets/img/Hyojeong Lee.jpg" alt="">
+              <h4 style="margin-top: 40px;">Hyojeong Lee</h4>
+              <h5>AI Researcher</h5>
+              <h5>Image to Image translation</h5>
+              <h5>hyojoy@yonsei.ac.kr</h5>
+            </div>
+            <div>
+              <img src="./assets/img/HyunjinKim.jpg" alt="">
+              <h4 style="margin-top: 40px;">Hyunjin Kim</h4>
+              <h5>AI Researcher</h5>
+              <h5>Segmentation</h5>
+              <h5>hjkim99@yonsei.ac.kr</h5>
+            </div>
+            <div>
+              <img src="./assets/img/SungHyunAhn.jpg" alt="">
+              <h4 style="margin-top: 40px;">SungHyun Ahn</h4>
+              <h5>AI Researcher</h5>
+              <h5>Segmentation</h5>
+              <h5>skd@yonsei.ac.kr</h5>
+            </div>
+          </div>
+        </div>
+        <div class="container">
+          <h3>Partners</h3>
+          <div class="jb-division-line"></div>
+          <div class="flex-container" style="justify-content: space-around;">
+            <div>
+              <img src="./assets/img/성모병원.jpg" alt="">
+              <h4 style="margin-top: 40px;">서울성모병원</h4>
+            </div>
           </div>
         </div>
       </div>
-      <div class="container">
-        <h3>Members</h3>
-        <div class="jb-division-line"></div>
-        <div class="flex-container" style="justify-content: space-around;">
-          <div>
-            <img src="./assets/img/Hyojeong Lee.jpg" alt="">
-            <h4 style="margin-top: 40px;">Hyojeong Lee</h4>
-            <h5>AI Researcher</h5>
-            <h5>Image to Image translation</h5>
-            <h5>hyojoy@yonsei.ac.kr</h5>
-          </div>
-          <div>
-            <img src="./assets/img/HyunjinKim.jpg" alt="">
-            <h4 style="margin-top: 40px;">Hyunjin Kim</h4>
-            <h5>AI Researcher</h5>
-            <h5>Segmentation</h5>
-            <h5>hjkim99@yonsei.ac.kr</h5>
-          </div>
-          <div>
-            <img src="./assets/img/SungHyunAhn.jpg" alt="">
-            <h4 style="margin-top: 40px;">SungHyun Ahn</h4>
-            <h5>AI Researcher</h5>
-            <h5>Segmentation</h5>
-            <h5>skd@yonsei.ac.kr</h5>
-          </div>
-        </div>
-      </div>
-      <div class="container">
-        <h3>Partners</h3>
-        <div class="jb-division-line"></div>
-        <div class="flex-container" style="justify-content: space-around;">
-          <div>
-            <img src="./assets/img/성모병원.jpg" alt="">
-            <h4 style="margin-top: 40px;">서울성모병원</h4>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
+    </section>
+  </div>
 
   <!-- Footer-->
   <footer class="footer-distributed">
-
     <div class="footer-left">
-
       <h3>Company<span> DVAT</span></h3>
-
       <p class="footer-links">
         <a href="index.html#page-top" class="link-1">Home</a>
-
         <a href="tech.html">Tech</a>
-
         <a href="member.html">Member</a>
-
+        <a href="publication.html">Publication</a>
         <a href="contact.html">Contact</a>
-
       </p>
-
       <p class="footer-company-name">DVAT © 2023</p>
     </div>
 
     <div class="footer-center">
-
       <div>
         <i class="fa fa-map-marker"></i>
-        <p><span>03722</span> 서울특별시 서대문구 연세로 50 연세대학교 제4공학관 D808 데이터공학 연구실</p>
+        <p>03722, 서울특별시 서대문구 연세로 50 <br>연세대학교 제4공학관 D808 데이터공학 연구실</p>
       </div>
-
       <div>
         <i class="fa fa-phone"></i>
         <p>02-2123-7757</p>
       </div>
-
       <div>
-        <i class="fa fa-phone"></i>
+        <i class="fa fa-address-card"></i>
         <p>사업자 등록번호ㅣ 725-66-00731</p>
       </div>
-
       <div>
-        <i class="fa fa-envelope"></i>
+        <i class="fa fa-house-user"></i>
         <p><a href="http://delab.yonsei.ac.kr/">http://delab.yonsei.ac.kr/</a></p>
       </div>
-
     </div>
 
     <div class="footer-right">
-
-      <img src="assets/img/logo.png" alt="Description" class="service-image">
-
+      <img src="assets/img/logo.png" alt="Description" class="service-image"> 
     </div>
-
   </footer>
 </body>
 
