--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
 <body id="page-top">
     <!-- Navigation-->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-2" id="mainNav">
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top">MedDE</a>
+            <a class="navbar-brand" href="index.html">MedDE</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ms-auto my-2 my-lg-0">
@@ -53,7 +53,7 @@
         </section>
     
         <!-- our technology-->
-        <section class="page-section bg-primary" id="about" style="background: black;">
+        <section class="page-section bg-primary" id="about">
             <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
             <div class="container-custom px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
