--- a/tech.html
+++ b/tech.html
@@ -6,6 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MedDE-Tech</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
+    <script src="js/scripts.js"></script>
+    <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/tech.css" rel="stylesheet" />
 </head>
@@ -23,80 +33,67 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="tech.html">Tech</a></li>
                     <li class="nav-item"><a class="nav-link" href="member.html">Member</a></li>
+                    <li class="nav-item"><a class="nav-link" href="publication.html">Publication</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </div>
     </nav>
 
-    <section style="margin-top: 10rem; margin-bottom: 10rem;">
-        <img src="assets/img/tech.gif" alt="Description"
-            style="width: 100%; max-width: 70rem; display: block; margin: 0 auto;">
-    </section>
-
-    <section style="margin-top: 10rem; margin-bottom: 10rem;">
-        <h2 class="text-white mt-0" style="text-align: center; margin-bottom: 5rem;">Technology</h2>
-        <div style="position: relative; display: block; margin: 0 auto;">
-            <img src="assets/img/tech1.png" class="main_tech">
-            <img src="assets/img/tech2.png" class="sub_tech1">
-            <img src="assets/img/tech3.png" class="sub_tech2">
-            <img src="assets/img/tech4.png" class="sub_tech3">
-        </div>
-    </section>
+    <div class="wrapper">
+        <section style="margin-top: 10rem; margin-bottom: 10rem;">
+            <img src="assets/img/tech.gif" alt="Description"
+                style="width: 100%; max-width: 70rem; display: block; margin: 0 auto;">
+        </section>
+    
+        <section style="margin-top: 10rem; margin-bottom: 10rem;">
+            <h2 class="text-white mt-0" style="text-align: center; margin-bottom: 5rem;">Technology</h2>
+            <div style="position: relative; display: block; margin: 0 auto;">
+                <img src="assets/img/tech1.png" class="main_tech">
+                <img src="assets/img/tech2.png" class="sub_tech1">
+                <img src="assets/img/tech3.png" class="sub_tech2">
+                <img src="assets/img/tech4.png" class="sub_tech3">
+            </div>
+        </section>
+    </div>
 
     <!-- Footer-->
     <footer class="footer-distributed">
-
         <div class="footer-left">
-
             <h3>Company<span> DVAT</span></h3>
-
             <p class="footer-links">
                 <a href="index.html#page-top" class="link-1">Home</a>
-
                 <a href="tech.html">Tech</a>
-
                 <a href="member.html">Member</a>
-
+                <a href="publication.html">Publication</a>
                 <a href="contact.html">Contact</a>
-
             </p>
-
             <p class="footer-company-name">DVAT © 2023</p>
         </div>
 
         <div class="footer-center">
-
             <div>
                 <i class="fa fa-map-marker"></i>
-                <p><span>03722</span> 서울특별시 서대문구 연세로 50 연세대학교 제4공학관 D808 데이터공학 연구실</p>
+                <p>03722, 서울특별시 서대문구 연세로 50 <br>연세대학교 제4공학관 D808 데이터공학 연구실</p>
             </div>
-
             <div>
                 <i class="fa fa-phone"></i>
                 <p>02-2123-7757</p>
             </div>
-
             <div>
-                <i class="fa fa-phone"></i>
+                <i class="fa fa-address-card"></i>
                 <p>사업자 등록번호ㅣ 725-66-00731</p>
             </div>
-
             <div>
-                <i class="fa fa-envelope"></i>
+                <i class="fa fa-house-user"></i>
                 <p><a href="http://delab.yonsei.ac.kr/">http://delab.yonsei.ac.kr/</a></p>
             </div>
-
         </div>
 
         <div class="footer-right">
-
-            <img src="assets/img/logo.png" alt="Description" class="service-image">
-
+            <img src="assets/img/logo.png" alt="Description" class="service-image"> 
         </div>
-
     </footer>
-    </div>
 </body>
 
 </html>
