edit wrapper margin top and other css margin top

--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
     <section class="wrapper">
         <!-- Masthead-->
         <div>
-            <h2 class="text-white" style="text-align: center; margin-top:5rem">Contact</h2>
+            <h2 class="text-white" style="text-align: center; margin-top:50px;">Contact</h2>
         </div>
         <div id="map"></div>
         <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDD6W5pZd5sgd9Qd6oJsGi1jRlM6bNX_pE&callback=initMap">
