--- a/tech.html
+++ b/tech.html
@@ -41,7 +41,7 @@
     </nav>
 
     <div class="wrapper">
-        <section style="margin-top: 10rem; margin-bottom: 10rem;">
+        <section style="margin: 50px 0;">
             <img src="assets/img/tech.gif" alt="Description"
                 style="width: 100%; max-width: 70rem; display: block; margin: 0 auto;">
         </section>
