modify every publication page

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="tech.html">Tech</a></li>
                     <li class="nav-item"><a class="nav-link" href="member.html">Member</a></li>
-                    <li class="nav-item"><a class="nav-link" href="publication.html">Publication</a></li>
+                    <li class="nav-item"><a class="nav-link" href="publication_dpc.html">Publication</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -101,7 +101,7 @@
                 <a href="index.html#page-top" class="link-1">Home</a>
                 <a href="tech.html">Tech</a>
                 <a href="member.html">Member</a>
-                <a href="publication.html">Publication</a>
+                <a href="publication_dpc.html">Publication</a>
                 <a href="contact.html">Contact</a>
             </p>
             <p class="footer-company-name">DVAT © 2023</p>
