--- a/tech.html
+++ b/tech.html
@@ -33,7 +33,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="tech.html">Tech</a></li>
                     <li class="nav-item"><a class="nav-link" href="member.html">Member</a></li>
-                    <li class="nav-item"><a class="nav-link" href="publication.html">Publication</a></li>
+                    <li class="nav-item"><a class="nav-link" href="publication_dpc.html">Publication</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -93,50 +93,43 @@
     </section>
   
 
-    <!-- Footer-->
-    <footer class="footer-distributed">
-
-        <div class="footer-left">
-
-            <h3>Company<span> DVAT</span></h3>
-
-            <p class="footer-links">
-                <a href="index.html#page-top" class="link-1">Home</a>
-
-                <a href="tech.html">Tech</a>
-
-                <a href="member.html">Member</a>
-
-                <a href="contact.html">Contact</a>
-
-            </p>
-
-            <p class="footer-company-name">DVAT © 2023</p>
-        </div>
-
-        <div class="footer-center">
-            <div>
-                <i class="fa fa-map-marker"></i>
-                <p>03722, 서울특별시 서대문구 연세로 50 <br>연세대학교 제4공학관 D808 데이터공학 연구실</p>
+        <!-- Footer-->
+        <footer class="footer-distributed">
+            <div class="footer-left">
+                <h3>Company<span> DVAT</span></h3>
+                <p class="footer-links">
+                    <a href="index.html#page-top" class="link-1">Home</a>
+                    <a href="tech.html">Tech</a>
+                    <a href="member.html">Member</a>
+                    <a href="publication_dpc.html">Publication</a>
+                    <a href="contact.html">Contact</a>
+                </p>
+                <p class="footer-company-name">DVAT © 2023</p>
             </div>
-            <div>
-                <i class="fa fa-phone"></i>
-                <p>02-2123-7757</p>
+    
+            <div class="footer-center">
+                <div>
+                    <i class="fa fa-map-marker"></i>
+                    <p>03722, 서울특별시 서대문구 연세로 50 <br>연세대학교 제4공학관 D808 데이터공학 연구실</p>
+                </div>
+                <div>
+                    <i class="fa fa-phone"></i>
+                    <p>02-2123-7757</p>
+                </div>
+                <div>
+                    <i class="fa fa-address-card"></i>
+                    <p>사업자 등록번호ㅣ 725-66-00731</p>
+                </div>
+                <div>
+                    <i class="fa fa-house-user"></i>
+                    <p><a href="http://delab.yonsei.ac.kr/">http://delab.yonsei.ac.kr/</a></p>
+                </div>
             </div>
-            <div>
-                <i class="fa fa-address-card"></i>
-                <p>사업자 등록번호ㅣ 725-66-00731</p>
+    
+            <div class="footer-right">
+                <img src="assets/img/logo.png" alt="Description" class="service-image"> 
             </div>
-            <div>
-                <i class="fa fa-house-user"></i>
-                <p><a href="http://delab.yonsei.ac.kr/">http://delab.yonsei.ac.kr/</a></p>
-            </div>
-        </div>
-
-        <div class="footer-right">
-            <img src="assets/img/logo.png" alt="Description" class="service-image"> 
-        </div>
-    </footer>
+        </footer>
 </body>
 
 </html>
