--- a/tech.html
+++ b/tech.html
@@ -39,44 +39,12 @@
             </div>
         </div>
     </nav>
+
     <section style="margin-top: 10rem; margin-bottom: 10rem;">
         <img src="assets/img/문제정의.gif" alt="Description"
             style="width: 100%; max-width: 70rem; display: block; margin: 0 auto;">
     </section>
-
-    <!-- 이미지 슬라이더 -->
-    <h2 class="text-white mt-0" style="text-align: center; margin-bottom: 5rem;">Title</h2>
-    <div class="slide-info">
-        <p class> 설명을 이곳에 적기</p>
-    </div>
-    <body>
-
-        <div class="slide slide_wrap">
-          <div class="slide_item item1">
-            <img src="assets/img/1.png" alt="Slide 1">
-          </div>
-          <div class="slide_item item2">
-            <img src="assets/img/2.png" alt="Slide 2">
-          </div>
-          <div class="slide_item item3">
-            <img src="assets/img/3.png" alt="Slide 3">
-          </div>
-          <div class="slide_item item4">
-            <img src="assets/img/4.png" alt="Slide 4">
-          </div>
-          <div class="slide_item item5">
-            <img src="assets/img/5.png" alt="Slide 5">
-          </div>
-          <div class="slide_prev_button slide_button">◀</div>
-          <div class="slide_next_button slide_button">▶</div>
-          <ul class="slide_pagination"></ul>
-        </div>
-        <script src="js\slide.js"></script>
-      </body>
-    <!-- 이미지 슬라이더 --> 
-      
   
-
     <section style="margin-top: 10rem; margin-bottom: 10rem;">
         <img src="assets/img/tech.gif" alt="Description"
             style="width: 100%; max-width: 70rem; display: block; margin: 0 auto;">
@@ -91,8 +59,35 @@
             <img src="assets/img/tech4.png" class="sub_tech3">
         </div>
     </section>
-  
+  `
+ <!-- 이미지 슬라이더 -->
+ <section style="margin-top: 10rem; margin-bottom: 10rem;">
+ <h2 class="text-white mt-0" style="text-align: center; margin-bottom: 5rem;">Title</h2>
+     <div class="slide slide_wrap">
+       <div class="slide_item item1">
+         <img src="assets/img/1.png" alt="Slide 1">
+       </div>
+       <div class="slide_item item2">
+         <img src="assets/img/2.png" alt="Slide 2">
+       </div>
+       <div class="slide_item item3">
+         <img src="assets/img/3.png" alt="Slide 3">
+       </div>
+       <div class="slide_item item4">
+         <img src="assets/img/4.png" alt="Slide 4">
+       </div>
+       <div class="slide_item item5">
+         <img src="assets/img/5.png" alt="Slide 5">
+       </div>
+       <div class="slide_prev_button slide_button">◀</div>
+       <div class="slide_next_button slide_button">▶</div>
+       <ul class="slide_pagination"></ul>
+     </div>
+     <script src="js\slide.js"></script>
 
+</section>
+ <!-- 이미지 슬라이더 --> 
+   
     <!-- Footer-->
     <footer class="footer-distributed">
 
