--- a/tech.html
+++ b/tech.html
@@ -62,30 +62,42 @@
   `
  <!-- 이미지 슬라이더 -->
  <section style="margin-top: 3rem; margin-bottom: 10rem;">
- <h2 class="text-white mt-0" style="text-align: center; margin-bottom: 5rem;">Vision</h2>
-     <div class="slide slide_wrap">
-       <div class="slide_item item1">
-         <img src="assets/img/1.png" alt="Slide 1">
-       </div>
-       <div class="slide_item item2">
-         <img src="assets/img/2.png" alt="Slide 2">
-       </div>
-       <div class="slide_item item3">
-         <img src="assets/img/3.png" alt="Slide 3">
-       </div>
-       <div class="slide_item item4">
-         <img src="assets/img/4.png" alt="Slide 4">
-       </div>
-       <div class="slide_item item5">
-         <img src="assets/img/5.png" alt="Slide 5">
-       </div>
-       <div class="slide_prev_button slide_button">◀</div>
-       <div class="slide_next_button slide_button">▶</div>
-       <ul class="slide_pagination"></ul>
-     </div>
-     <script src="js\slide.js"></script>
-</section>
-        <!-- Footer-->
+    <h2 class="text-white mt-0" style="text-align: center; margin-bottom: 5rem;">Vision</h2>
+    <div class="slide_wrap">
+      <div class="slide">
+        <div class="slide_item item1">
+          <img src="assets/img/1.png" alt="Slide 1">
+        </div>
+        <div class="slide_item item2">
+          <img src="assets/img/2.png" alt="Slide 2">
+        </div>
+        <div class="slide_item item3">
+          <img src="assets/img/3.png" alt="Slide 3">
+        </div>
+        <div class="slide_item item4">
+          <img src="assets/img/4.png" alt="Slide 4">
+        </div>
+        <div class="slide_item item5">
+          <img src="assets/img/5.png" alt="Slide 5">
+        </div>
+      </div>
+    </div>
+    <ul class="slide_pagination"></ul>
+    <div class="slide_buttons"> <!-- 버튼들을 .slide_wrap 외부로 이동시킵니다. -->
+      <img class="slide_button" data-slide="0" src="assets/img/btn1.png"></button>
+      <img class="slide_button" data-slide="1" src="assets/img/btn2.png"></button>
+      <img class="slide_button" data-slide="2" src="assets/img/btn3.png"></button>
+      <img class="slide_button" data-slide="3" src="assets/img/btn4.png"></button>
+      <img class="slide_button" data-slide="4" src="assets/img/btn5.png"></button>
+    
+    </div>
+    <script src="js\slide.js"></script>
+  </section>
+  
+
+
+
+<!-- Footer-->
         <footer class="footer-distributed">
             <div class="footer-left">
                 <h3>Company<span> DVAT</span></h3>
