--- a/member.html
+++ b/member.html
@@ -14,6 +14,7 @@
   <!-- Core theme CSS (includes Bootstrap)-->
   <link href="css/styles.css" rel="stylesheet" />
   <link href="css/member.css" rel="stylesheet" />
+  <script src="./src/assets/json/member.json" type="text/javascript"></script>
 </head>
 
 <body>
@@ -43,59 +44,23 @@
         <img src="./assets/img/hands.jpg" alt="">
       </div>
       <div class="member__content">
-        <div class="container">
+        <div class="container main_member">
           <div class="flex-container" style="justify-content: space-around;">
-            <div>
-              <img src="./assets/img/YoungWanJo.jpg" alt="">
-              <h4 style="margin-top: 40px;">YoungWan Jo</h4>
-              <h5>CEO</h5>
-              <h5>Image to Image translation</h5>
-              <h5>jyy1551@yonsei.ac.kr</h5>
-            </div>
-            <div>
-              <img src="./assets/img/ShanghyunPark.jpg" alt="">
-              <h4 style="margin-top: 40px;">Sanghyun Park</h4>
-              <h5>CTO</h5>
-              <h5>Professor</h5>
-              <h5>sanghyun@yonsei.ac.kr</h5>
-            </div>
+            
           </div>
         </div>
-        <div class="container">
+        <div class="container sub_member">
           <h3>Members</h3>
           <div class="jb-division-line"></div>
           <div class="flex-container" style="justify-content: space-around;">
-            <div>
-              <img src="./assets/img/Hyojeong Lee.jpg" alt="">
-              <h4 style="margin-top: 40px;">Hyojeong Lee</h4>
-              <h5>AI Researcher</h5>
-              <h5>Image to Image translation</h5>
-              <h5>hyojoy@yonsei.ac.kr</h5>
-            </div>
-            <div>
-              <img src="./assets/img/HyunjinKim.jpg" alt="">
-              <h4 style="margin-top: 40px;">Hyunjin Kim</h4>
-              <h5>AI Researcher</h5>
-              <h5>Segmentation</h5>
-              <h5>hjkim99@yonsei.ac.kr</h5>
-            </div>
-            <div>
-              <img src="./assets/img/SungHyunAhn.jpg" alt="">
-              <h4 style="margin-top: 40px;">SungHyun Ahn</h4>
-              <h5>AI Researcher</h5>
-              <h5>Segmentation</h5>
-              <h5>skd@yonsei.ac.kr</h5>
-            </div>
+
           </div>
         </div>
-        <div class="container">
+        <div class="container partners">
           <h3>Partners</h3>
           <div class="jb-division-line"></div>
           <div class="flex-container" style="justify-content: space-around;">
-            <div>
-              <img src="./assets/img/성모병원.jpg" alt="">
-              <h4 style="margin-top: 40px;">서울성모병원</h4>
-            </div>
+            
           </div>
         </div>
       </div>
@@ -138,6 +103,7 @@
     <div class="footer-right">
       <img src="assets/img/logo.png" alt="Description" class="service-image"> 
     </div>
+    <script src="./js/member.js"></script>
   </footer>
 </body>
 
